kubernetes/applications/jellyfin/jellyfin-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: theater
spec:
  replicas: 1
  strategy:
    rollingUpdate: null
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: ghcr.io/jellyfin/jellyfin
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8096
          protocol: TCP
        - name: udp
          containerPort: 7359
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        nfs:
          server: 192.168.1.228
          path: /mnt/homelab/k8s/nfs/media
