kubernetes/applications/jellyfin/jellyfin-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: theater
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8096
    targetPort: http
    protocol: TCP
  - name: udp
    port: 7359
    targetPort: udp
    protocol: UDP
  selector:
    app.kubernetes.io/name: jellyfin
